<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/include_header"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/search_rg"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/search_rbtn_zonghe"
            android:text="@string/zonghe"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/search_rbtn_xiaoliang"
            android:text="@string/xiaoliang"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/search_rbtn_price"
            android:text="@string/price"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            />
    </RadioGroup>

    <com.jcodecraeer.xrecyclerview.XRecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/search_xrv"
        />

</LinearLayout>