<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/close"
                android:id="@+id/login_iv_close"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kefu"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_marginTop="2dp"
                android:id="@+id/login_tv_kefu"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                app:placeholderImage="@drawable/jddog"
                android:id="@+id/login_sdv_header"
                app:roundAsCircle="true"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:id="@+id/login_et_mobile"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pwd"
                    android:id="@+id/login_et_pwd"
                    android:inputType="numberPassword"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="18dp"
                    />
                <ToggleButton
                    android:id="@+id/login_togglePwd"
                    android:layout_width="16dp"
                    android:layout_height="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/yannormal"
                    android:padding="10dp"
                    android:textOff=""
                    android:textOn=""
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/login_tv_wj"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wangji"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/login_tv_wj"
                    android:layout_marginRight="10dp"
                    />
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#c0220a"
                android:text="@string/login"
                android:textColor="#fff"
                android:textStyle="bold"
                android:id="@+id/login_btn_login"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/duanxin"
                android:id="@+id/login_tv_duanxin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/newuser"
                android:id="@+id/login_tv_newuser"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="36dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/login_ll_weilogin"
            android:layout_marginLeft="60dp"
            >
            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:roundAsCircle="true"
                app:placeholderImage="@drawable/weixin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weixinlogin"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/login_ll_qqlogin"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            >
            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:roundAsCircle="true"
                app:placeholderImage="@drawable/mqq"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qqlogin"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>