<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/close"
            android:id="@+id/reg_iv_close"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kefu"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:id="@+id/reg_tv_kefu"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:placeholderImage="@drawable/jddog"
            android:layout_centerHorizontal="true"
            android:id="@+id/reg_sdv_header"
            app:roundAsCircle="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:id="@+id/reg_et_mobile"
            android:singleLine="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:id="@+id/reg_et_pwd"
            android:inputType="numberPassword"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:singleLine="true"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#c0220a"
            android:text="@string/zhuce"
            android:textColor="#fff"
            android:textStyle="bold"
            android:id="@+id/reg_btn_reg"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>


</LinearLayout>