<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:id="@+id/details_vp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/details_tv_title"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/details_tv_price"
            android:textColor="#f00"
            android:padding="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:id="@+id/details_ll"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cart"
            android:button="@null"
            android:gravity="center"
            android:id="@+id/details_btn1_car"
            android:drawableTop="@drawable/shopcar"
            android:layout_weight="1"
            android:padding="10dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/addcart"
            android:button="@null"
            android:gravity="center"
            android:id="@+id/details_btn2_addcar"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="#e8a811"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/buy"
            android:button="@null"
            android:gravity="center"
            android:id="@+id/details_btn3_buy"
            android:layout_weight="3"
            android:background="#f00"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </LinearLayout>
</FrameLayout>