<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cart_child_box"
            android:layout_marginTop="36dp"
            android:focusable="false"
            />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_toRightOf="@id/cart_child_box"
            android:id="@+id/cart_child_img"
            />
        <TextView
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/cart_child_title"
            android:layout_toRightOf="@id/cart_child_img"
            android:layout_alignTop="@id/cart_child_img"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/cart_child_price"
            android:layout_toRightOf="@id/cart_child_img"
            android:layout_alignBottom="@id/cart_child_img"
            android:layout_marginRight="10dp"
            android:textColor="#f00"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/cart_child_img"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jian"
                android:id="@+id/cart_jian"
                android:background="@drawable/sumbgcolor"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sum"
                android:id="@+id/cart_sum"
                android:background="@drawable/sumbgcolor"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jia"
                android:id="@+id/cart_jia"
                android:background="@drawable/sumbgcolor"
                android:gravity="center"
                />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>